# Practice_lsai

./: README.md
Core/Inc/: stm32f4xx_hal_conf.h
Core/Src/: stm32f4xx_it.c
Middlewares/: readme.txt
Middlewares/MALLOC/: CMakeLists.txt  malloc.c  malloc.h
Middlewares/RTT/: CMakeLists.txt
Middlewares/USB/: CMakeLists.txt
Middlewares/USB/STM32_USB_Device_Library/Class/AUDIO/Src/: usbd_audio.c
Middlewares/USB/STM32_USB_Device_Library/Class/MSC/Src/: usbd_msc_bot.c  usbd_msc_scsi.c
Middlewares/USB/USB_APP/: usbd_cdc_interface.c  usbd_cdc_interface.h  usbd_conf.c  usbd_conf.h
Middlewares/uart_protrcol/: CMakeLists.txt  protocol.c  protocol.h  ring_buffer.c  ring_buffer.h
app/: main.c  task_event.c  task_event.h
cmake/: GenerateVersionHeader.cmake  gcc-arm-none-eabi.cmake
cmake/stm32cubemx/: CMakeLists.txt
driver/: readme.txt
driver/bsp/: CMakeLists.txt
driver/bsp/include/: adc.h  control_io.h  control_remote_key.h  key.h  myiic.h  pwmdac.h  timer.h  tpl0401.h
driver/system/: CMakeLists.txt  readme.txt
driver/system/delay/: delay.c  delay.h
driver/system/sys/: sys.c  sys.h
driver/system/usart/: log.h  usart.c  usart.h
freertos/: CMakeLists.txt
freertos/include/: FreeRTOSConfig.h
tools/: download_fw.py  requirements.txt  stm32f407ve_jlink.jflash
